# mensa-mining

./: .env.sample  .gitignore  Dockerfile  pyproject.toml  results.ipynb  results2.ipynb  st.py  st_example.py  stupa.ipynb
app/: parser.py
app/core/: config.py
app/database/: session.py
app/models/: __init__.py  dish.py
app/schemas/: __init__.py  dish.py
