[tool.poetry]
name = "mensa-mining"
version = "0.1.0"
description = ""
authors = ["Adrian <adrian@adrblo.de>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^1.8.2"
requests = "^2.26.0"
SQLAlchemy = "^1.4.26"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
